--- a/index.html
+++ b/index.html
@@ -6,13 +6,52 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>bcm_vue</title>
 </head>
-
-<body>
-  <div id="app"></div>
-</body>
-
-</html>
 <style>
+  @font-face {
+    font-family: 'menufont';
+    /* IE9*/
+    src: url('/static/webfont/webfont.eot');
+    /* IE6-IE8 */
+    src: url('/static/webfont/webfont.eot?#iefix') format('embedded-opentype'),
+    /* chrome、firefox */
+    url('/static/webfont/webfont.woff') format('woff'),
+    /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('/static/webfont/webfont.ttf') format('truetype'),
+    /* iOS 4.1- */
+    url('/static/webfont/webfont.svg#webfont') format('svg');
+  }
+
+  .menu-font {
+    font-family: 'menufont' !important;
+    font-size: 14px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    /* -webkit-text-stroke-width: 0.1px; */
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  @font-face {
+    font-family: 'titlefont';
+    /* IE9*/
+    src: url('/static/webfont/title/webfont.eot');
+    /* IE6-IE8 */
+    src: url('/static/webfont/title/webfont.eot?#iefix') format('embedded-opentype'),
+    /* chrome、firefox */
+    url('/static/webfont/title/webfont.woff') format('woff'),
+    /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('/static/webfont/title/webfont.ttf') format('truetype'),
+    /* iOS 4.1- */
+    url('/static/webfont/title/webfont.svg#webfont') format('svg');
+  }
+
+  .title-font {
+    font-family: 'titlefont' !important;
+    font-size: 1.5rem;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
   body,
   html {
     margin: 0;
@@ -28,3 +67,9 @@
   }
 
 </style>
+
+<body>
+  <div id="app"></div>
+</body>
+
+</html>
