--- a/index.html
+++ b/index.html
@@ -23,32 +23,10 @@
 
   .menu-font {
     font-family: 'menufont' !important;
-    font-size: 14px;
+    font-size: 15px;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     /* -webkit-text-stroke-width: 0.1px; */
-    -moz-osx-font-smoothing: grayscale;
-  }
-
-  @font-face {
-    font-family: 'titlefont';
-    /* IE9*/
-    src: url('/static/webfont/title/webfont.eot');
-    /* IE6-IE8 */
-    src: url('/static/webfont/title/webfont.eot?#iefix') format('embedded-opentype'),
-    /* chrome、firefox */
-    url('/static/webfont/title/webfont.woff') format('woff'),
-    /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url('/static/webfont/title/webfont.ttf') format('truetype'),
-    /* iOS 4.1- */
-    url('/static/webfont/title/webfont.svg#webfont') format('svg');
-  }
-
-  .title-font {
-    font-family: 'titlefont' !important;
-    font-size: 1.5rem;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
 
@@ -57,10 +35,11 @@
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
     font-weight: 400;
+    color: #303133;
     -webkit-font-smoothing: antialiased;
-    background-color: #eee;
+    background-color: #EBEEF5;
     font-size: 13px;
     line-height: 1.42857143;
     overflow: hidden;
